--- a/results.html
+++ b/results.html
@@ -167,8 +167,11 @@
     border-bottom: 1px solid #e0e0e0;
     display: flex;
     align-items: center;
-    gap: 15px;
-    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: nowrap;
+    max-width: 1200px;
+    margin: 0 auto;
   }
 
   .dark-mode .filters-sort-bar {
@@ -599,9 +602,11 @@
     }
 
     .filters-sort-bar {
-      flex-direction: column;
-      align-items: stretch;
-      gap: 10px;
+      flex-direction: row;
+      align-items: center;
+      gap: 15px;
+      justify-content: space-around;
+      flex-wrap: wrap;
     }
   }
 
@@ -861,7 +866,7 @@
       </div>
     </div>
 
-    <button class="filter-sort-btn" style="margin-right: auto;">
+    <button class="filter-sort-btn">
       <i class="fas fa-map"></i>
       <span>عرض الخريطة</span>
     </button>
