--- a/results.html
+++ b/results.html
@@ -44,48 +44,10 @@
     z-index: 1000;
   }
 
-  .navbar img {
+  .navbar img, .navbar-logo {
     height: 54px;
     width: auto;
     object-fit: contain;
-  }
-
-  /* الشعار المتحرك */
-  .logo-container {
-    display: flex;
-    align-items: center;
-  }
-
-  .animated-logo {
-    display: flex;
-    align-items: center;
-    gap: 2px;
-  }
-
-  .logo-text {
-    font-size: 24px;
-    font-weight: bold;
-    color: #007bff;
-    animation: bounce 2s infinite;
-    display: inline-block;
-  }
-
-  .logo-text:nth-child(1) { animation-delay: 0s; }
-  .logo-text:nth-child(2) { animation-delay: 0.1s; }
-  .logo-text:nth-child(3) { animation-delay: 0.2s; }
-  .logo-text:nth-child(4) { animation-delay: 0.3s; }
-  .logo-text:nth-child(5) { animation-delay: 0.4s; }
-
-  @keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-      transform: translateY(0);
-    }
-    40% {
-      transform: translateY(-10px);
-    }
-    60% {
-      transform: translateY(-5px);
-    }
   }
 
   .navbar-toggler {
@@ -761,15 +723,7 @@
 <body class="light-mode">
   <!-- Navbar -->
   <nav class="navbar">
-    <div class="logo-container">
-      <div class="animated-logo">
-        <span class="logo-text">P</span>
-        <span class="logo-text">a</span>
-        <span class="logo-text">y</span>
-        <span class="logo-text">g</span>
-        <span class="logo-text">o</span>
-      </div>
-    </div>
+    <img src="paygs.gif" alt="Paygo Logo" class="navbar-logo">
     
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
