--- a/results.html
+++ b/results.html
@@ -740,27 +740,27 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">الرئيسية</a>
+          <a class="nav-link" href="index.html">الرئيسية</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             وجهات سياحية
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">وجهات آسيا</a></li>
-            <li><a class="dropdown-item" href="#">وجهات أوروبا</a></li>
-            <li><a class="dropdown-item" href="#">وجهات أفريقيا</a></li>
-            <li><a class="dropdown-item" href="#">بقية العالم</a></li>
+            <li><a class="dropdown-item" href="index.html#asia-destinations">وجهات آسيا</a></li>
+            <li><a class="dropdown-item" href="index.html#europe-destinations">وجهات أوروبا</a></li>
+            <li><a class="dropdown-item" href="index.html#africa-destinations">وجهات أفريقيا</a></li>
+            <li><a class="dropdown-item" href="index.html#world-destinations">بقية العالم</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">المدونة</a>
+          <a class="nav-link" href="index.html#blog">المدونة</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">حولنا</a>
+          <a class="nav-link" href="index.html#about">حولنا</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">اتصل بنا</a>
+          <a class="nav-link" href="index.html#contact">اتصل بنا</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -1218,3 +1218,4 @@
   </script>
 </body>
 </html>
+
