إضافة نظام مقارنة الأسعار مثل Wego
- إنشاء صفحة نتائج البحث الجديدة (results.html)
- إنشاء صفحة تفاصيل الفندق مع مقارنة الأسعار (hotel-details.html)
- عرض الأسعار من 5 مواقع حجز مختلفة
- ترتيب الأسعار من الأرخص للأغلى
- تصميم متجاوب بالكامل للجوال
- روابط حجز مباشرة لكل موقع

--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
                 }));
                 
                 // الانتقال لصفحة النتائج
-                window.location.href = `FILE_02_amadeus_results.html?city=${selectedCity.iata_code}&checkin=${searchData.checkInDate}&checkout=${searchData.checkOutDate}&guests=${searchData.adults}`;
+                window.location.href = `results.html?city=${selectedCity.iata_code}&checkin=${searchData.checkInDate}&checkout=${searchData.checkOutDate}&guests=${searchData.adults}`;
                 
             } catch (error) {
                 console.error('خطأ في البحث:', error);
