تطوير نظام حجز فنادق متكامل واحترافي
✨ المميزات الجديدة:

1. نظام بحث متقدم مع فلاتر:
   - فلترة حسب السعر
   - فلترة حسب التقييم (3-5 نجوم)
   - فلترة حسب المرافق (واي فاي، مسبح، موقف، مطعم، جيم، سبا)
   - ترتيب النتائج (موصى به، السعر، التقييم، المراجعات)

2. صفحة نتائج محسّنة:
   - عرض 12 فندق حقيقي في دبي
   - بطاقات فنادق احترافية مع صور حقيقية
   - معلومات تفصيلية (التقييم، المراجعات، المرافق)
   - تصميم متجاوب للجوال

3. صفحة تفاصيل الفندق:
   - معرض صور احترافي (5 صور)
   - خريطة تفاعلية (OpenStreetMap + Leaflet)
   - مراجعات العملاء الحقيقية (4 مراجعات)
   - قائمة المرافق والخدمات
   - وصف تفصيلي للفندق

4. نظام مقارنة الأسعار:
   - مقارنة من 4 مواقع حجز (Booking.com, Agoda, Expedia, Hotels.com)
   - عرض الأسعار مرتبة
   - روابط مباشرة للحجز

5. نظام الحجز المباشر:
   - نموذج حجز تفاعلي
   - اختيار التواريخ وعدد الضيوف
   - حساب السعر الإجمالي
   - التوجيه لإتمام الحجز

6. تحسينات التصميم:
   - تصميم عصري واحترافي
   - ألوان متناسقة
   - تجربة مستخدم ممتازة
   - متجاوب 100% للجوال

📱 التوافق:
- Desktop ✅
- Tablet ✅
- Mobile ✅

🔧 ملف التكوين:
- api-config.js: جاهز لربط Booking.com API من RapidAPI

--- a/index.html
+++ b/index.html
@@ -737,8 +737,8 @@
                 countryName: selectedCity.country
             }));
             
-            // الانتقال مباشرة لصفحة النتائج
-            window.location.href = `results.html?city=${selectedCity.iata_code}&checkin=${searchData.checkInDate}&checkout=${searchData.checkOutDate}&guests=${searchData.adults}`;
+            // الانتقال مباشرة لصفحة النتائج المحسّنة
+            window.location.href = `results-enhanced.html?city=${selectedCity.iata_code}&checkin=${searchData.checkInDate}&checkout=${searchData.checkOutDate}&guests=${searchData.adults}`;
         });
         
         // تهيئة الصفحة
