تحديث الموقع لاستخدام Booking.com API بدلاً من البيانات الوهمية - إزالة جميع إشارات Amadeus

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paygo.com - حجز الفنادق مع Amadeus</title>
+    <title>Paygo.com - حجز الفنادق من Booking.com</title>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -47,11 +47,11 @@
             -webkit-text-fill-color: transparent;
         }
 
-        .amadeus-badge {
+        .booking-badge {
             display: flex;
             align-items: center;
             gap: 10px;
-            background: linear-gradient(45deg, #ff6b6b, #feca57);
+            background: linear-gradient(45deg, #003580, #0057b8);
             color: white;
             padding: 8px 16px;
             border-radius: 25px;
@@ -339,7 +339,7 @@
                 font-size: 1.5rem;
             }
             
-            .amadeus-badge {
+            .booking-badge {
                 font-size: 0.85rem;
                 padding: 6px 12px;
             }
@@ -409,17 +409,17 @@
             <div class="logo">
                 <i class="fas fa-plane"></i> Paygo.com
             </div>
-            <div class="amadeus-badge">
-                <i class="fas fa-globe"></i>
-                بدعم من Amadeus
+            <div class="booking-badge">
+                <i class="fas fa-hotel"></i>
+                بدعم من Booking.com
             </div>
         </header>
 
         <main class="main-card">
             <h1 class="main-title">احجز رحلتك</h1>
             <p class="subtitle">
-                اكتشف أفضل الفنادق حول العالم مع شبكة Amadeus العالمية<br>
-                أكثر من 150,000 فندق في أكثر من 190 دولة
+                اكتشف أفضل الفنادق حول العالم مع Booking.com<br>
+                أكثر من 28 مليون عقار في أكثر من 150,000 وجهة
             </p>
 
             <div class="error-message" id="errorMessage"></div>
@@ -487,7 +487,7 @@
                 </div>
                 <h3 class="feature-title">شبكة عالمية</h3>
                 <p class="feature-desc">
-                    الوصول إلى أكثر من 150,000 فندق في جميع أنحاء العالم عبر شبكة Amadeus
+                    الوصول إلى أكثر من 28 مليون عقار في جميع أنحاء العالم عبر Booking.com
                 </p>
             </div>
             
