إضافة cache busting لإجبار تحميل النسخة الجديدة

--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
     </div>
 
     <!-- تضمين ملف config.js -->
-    <script src="config.js"></script>
+    <script src="config.js?v=2.0"></script>
 
     <script>
         // عناصر DOM
