--- a/results-enhanced.html
+++ b/results-enhanced.html
@@ -500,7 +500,7 @@
     </div>
 
     <!-- تضمين ملف config.js -->
-    <script src="config.js"></script>
+    <script src="config.js?v=2.0"></script>
 
     <script>
         // الحصول على معاملات البحث من URL
