Fix critical HTML error - script tag

--- a/results-enhanced.html
+++ b/results-enhanced.html
@@ -502,7 +502,8 @@
     <!-- تضمين ملف config.js -->
     <script src="config.js?v=7.0"></script>
 
-    <        // الحصول على معاملات البحث من URL
+    <script>
+        // الحصول على معاملات البحث من URL
         const urlParams = new URLSearchParams(window.location.search);
         const destId = urlParams.get('dest_id');
         const cityCode = urlParams.get('city');
