--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PAYGO - Welcome</title>
+    <title>PAYGO</title>
     <style>
         * {
             margin: 0;
@@ -12,7 +12,7 @@
         }
 
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Arial Black', 'Arial Bold', sans-serif;
             overflow: hidden;
             background: #000;
         }
@@ -27,26 +27,12 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            background: #000;
             z-index: 9999;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        }
-
-        /* خلفية فيديو المناظر الطبيعية */
-        .background-video {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            opacity: 0.4;
-            z-index: 1;
         }
 
         /* حاوية الأنيميشن */
         .animation-wrapper {
-            position: relative;
-            z-index: 2;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -54,31 +40,30 @@
         }
 
         /* أيقونة الطائرة */
-        .plane-icon {
-            width: 200px;
-            height: 200px;
+        .plane-container {
+            width: 300px;
+            height: 300px;
             position: relative;
-            margin-bottom: 30px;
-            filter: drop-shadow(0 10px 30px rgba(0,0,0,0.3));
+            margin-bottom: 50px;
         }
 
-        /* SVG الطائرة مع خلفية شفافة تظهر المناظر */
-        .plane-svg {
+        .plane-image {
             width: 100%;
             height: 100%;
+            object-fit: contain;
         }
 
-        /* نص PAYGO */
+        /* نص PAYGO بنفس أسلوب TRAVEL */
         .paygo-text {
-            font-size: 80px;
+            font-size: 100px;
             font-weight: 900;
-            letter-spacing: 15px;
-            background: linear-gradient(45deg, #f093fb 0%, #f5576c 100%);
+            letter-spacing: 20px;
+            color: transparent;
+            background: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?w=800&q=80') center/cover;
             -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
             background-clip: text;
-            text-shadow: 0 5px 20px rgba(0,0,0,0.2);
-            animation: fadeInText 2s ease-in 0.5s forwards;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.8);
+            animation: fadeInText 2s ease-in 1s forwards;
             opacity: 0;
         }
 
@@ -92,7 +77,7 @@
                 opacity: 1;
             }
             100% {
-                transform: translateY(-10vh);
+                transform: translateY(0);
                 opacity: 1;
             }
         }
@@ -101,11 +86,11 @@
         @keyframes fadeInText {
             0% {
                 opacity: 0;
-                transform: translateY(20px);
+                transform: scale(0.8);
             }
             100% {
                 opacity: 1;
-                transform: translateY(0);
+                transform: scale(1);
             }
         }
 
@@ -123,53 +108,24 @@
 
         /* Responsive */
         @media (max-width: 768px) {
-            .plane-icon {
-                width: 150px;
-                height: 150px;
+            .plane-container {
+                width: 200px;
+                height: 200px;
             }
 
             .paygo-text {
-                font-size: 50px;
-                letter-spacing: 10px;
+                font-size: 60px;
+                letter-spacing: 12px;
             }
         }
     </style>
 </head>
 <body>
     <div class="splash-container" id="splashScreen">
-        <!-- خلفية فيديو المناظر الطبيعية -->
-        <video class="background-video" autoplay muted loop playsinline>
-            <source src="https://cdn.pixabay.com/vimeo/331357722/beach-28953.mp4?width=1280&hash=2f0e6b4b0d0e0a0e0a0e0a0e0a0e0a0e0a0e0a0e" type="video/mp4">
-        </video>
-
         <div class="animation-wrapper">
-            <!-- أيقونة الطائرة مع قناع SVG -->
-            <div class="plane-icon">
-                <svg class="plane-svg" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-                    <defs>
-                        <!-- تعريف القناع بشكل الطائرة -->
-                        <clipPath id="planeClip">
-                            <path d="M100,20 L120,80 L180,90 L120,100 L100,180 L80,100 L20,90 L80,80 Z"/>
-                        </clipPath>
-                    </defs>
-                    
-                    <!-- صورة المنظر الطبيعي داخل شكل الطائرة -->
-                    <image 
-                        href="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?w=800&q=80" 
-                        width="200" 
-                        height="200"
-                        clip-path="url(#planeClip)"
-                        preserveAspectRatio="xMidYMid slice"
-                    />
-                    
-                    <!-- حدود الطائرة -->
-                    <path 
-                        d="M100,20 L120,80 L180,90 L120,100 L100,180 L80,100 L20,90 L80,80 Z" 
-                        fill="none" 
-                        stroke="#000" 
-                        stroke-width="3"
-                    />
-                </svg>
+            <!-- أيقونة الطائرة -->
+            <div class="plane-container">
+                <img src="plane-design.png" alt="Plane" class="plane-image">
             </div>
 
             <!-- نص PAYGO -->
