--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
 
         body {
-            font-family: 'Arial Black', 'Arial Bold', sans-serif;
+            font-family: Arial, sans-serif;
             overflow: hidden;
             background: #000;
         }
@@ -36,61 +36,65 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            animation: moveUp 3s ease-out forwards;
+            animation: moveUp 3.5s ease-out forwards;
         }
 
-        /* أيقونة الطائرة */
+        /* الطائرة */
         .plane-container {
-            width: 300px;
-            height: 300px;
+            width: 350px;
+            height: 350px;
             position: relative;
-            margin-bottom: 50px;
+            margin-bottom: 60px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
-        .plane-image {
+        .plane-mask {
             width: 100%;
             height: 100%;
-            object-fit: contain;
+            position: relative;
+            -webkit-mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><path d="M100,20 L105,85 L170,95 L105,105 L100,180 L95,105 L30,95 L95,85 Z"/></svg>');
+            mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><path d="M100,20 L105,85 L170,95 L105,105 L100,180 L95,105 L30,95 L95,85 Z"/></svg>');
+            -webkit-mask-size: contain;
+            mask-size: contain;
+            -webkit-mask-repeat: no-repeat;
+            mask-repeat: no-repeat;
+            -webkit-mask-position: center;
+            mask-position: center;
+            background: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?w=800&q=80') center/cover;
         }
 
-        /* نص PAYGO بنفس أسلوب TRAVEL */
+        /* نص PAYGO */
         .paygo-text {
-            font-size: 100px;
+            font-size: 120px;
             font-weight: 900;
-            letter-spacing: 20px;
+            letter-spacing: 25px;
             color: transparent;
             background: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?w=800&q=80') center/cover;
             -webkit-background-clip: text;
             background-clip: text;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.8);
-            animation: fadeInText 2s ease-in 1s forwards;
-            opacity: 0;
+            -webkit-text-fill-color: transparent;
+            text-transform: uppercase;
+            font-family: 'Arial Black', sans-serif;
         }
 
         /* أنيميشن الحركة من الأسفل للأعلى */
         @keyframes moveUp {
             0% {
-                transform: translateY(100vh);
+                transform: translateY(150vh);
                 opacity: 0;
             }
-            50% {
+            30% {
+                opacity: 1;
+            }
+            70% {
+                transform: translateY(-5vh);
                 opacity: 1;
             }
             100% {
-                transform: translateY(0);
+                transform: translateY(-5vh);
                 opacity: 1;
-            }
-        }
-
-        /* أنيميشن ظهور النص */
-        @keyframes fadeInText {
-            0% {
-                opacity: 0;
-                transform: scale(0.8);
-            }
-            100% {
-                opacity: 1;
-                transform: scale(1);
             }
         }
 
@@ -109,13 +113,27 @@
         /* Responsive */
         @media (max-width: 768px) {
             .plane-container {
-                width: 200px;
-                height: 200px;
+                width: 250px;
+                height: 250px;
+                margin-bottom: 40px;
             }
 
             .paygo-text {
-                font-size: 60px;
-                letter-spacing: 12px;
+                font-size: 70px;
+                letter-spacing: 15px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .plane-container {
+                width: 180px;
+                height: 180px;
+                margin-bottom: 30px;
+            }
+
+            .paygo-text {
+                font-size: 50px;
+                letter-spacing: 10px;
             }
         }
     </style>
@@ -123,9 +141,9 @@
 <body>
     <div class="splash-container" id="splashScreen">
         <div class="animation-wrapper">
-            <!-- أيقونة الطائرة -->
+            <!-- الطائرة -->
             <div class="plane-container">
-                <img src="plane-design.png" alt="Plane" class="plane-image">
+                <div class="plane-mask"></div>
             </div>
 
             <!-- نص PAYGO -->
@@ -134,7 +152,7 @@
     </div>
 
     <script>
-        // الانتقال للصفحة الرئيسية بعد 4 ثواني
+        // الانتقال للصفحة الرئيسية بعد 5 ثواني
         setTimeout(() => {
             const splashScreen = document.getElementById('splashScreen');
             splashScreen.classList.add('fade-out');
@@ -142,7 +160,7 @@
             setTimeout(() => {
                 window.location.href = 'main.html';
             }, 1000);
-        }, 4000);
+        }, 5000);
     </script>
 </body>
 </html>
