--- a/index.html
+++ b/index.html
@@ -24,76 +24,35 @@
             width: 100vw;
             height: 100vh;
             display: flex;
-            flex-direction: column;
             justify-content: center;
             align-items: center;
             background: #000;
             z-index: 9999;
         }
 
-        /* حاوية الأنيميشن */
-        .animation-wrapper {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            animation: moveUp 3.5s ease-out forwards;
-        }
-
-        /* الطائرة */
-        .plane-container {
-            width: 350px;
-            height: 350px;
-            position: relative;
-            margin-bottom: 60px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .plane-mask {
-            width: 100%;
-            height: 100%;
-            position: relative;
-            -webkit-mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><path d="M100,20 L105,85 L170,95 L105,105 L100,180 L95,105 L30,95 L95,85 Z"/></svg>');
-            mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><path d="M100,20 L105,85 L170,95 L105,105 L100,180 L95,105 L30,95 L95,85 Z"/></svg>');
-            -webkit-mask-size: contain;
-            mask-size: contain;
-            -webkit-mask-repeat: no-repeat;
-            mask-repeat: no-repeat;
-            -webkit-mask-position: center;
-            mask-position: center;
-            background: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?w=800&q=80') center/cover;
-        }
-
-        /* نص PAYGO */
-        .paygo-text {
-            font-size: 120px;
-            font-weight: 900;
-            letter-spacing: 25px;
-            color: transparent;
-            background: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?w=800&q=80') center/cover;
-            -webkit-background-clip: text;
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
-            text-transform: uppercase;
-            font-family: 'Arial Black', sans-serif;
+        /* الصورة الكاملة */
+        .splash-image {
+            max-width: 90vw;
+            max-height: 90vh;
+            object-fit: contain;
+            animation: moveUp 3.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
         }
 
         /* أنيميشن الحركة من الأسفل للأعلى */
         @keyframes moveUp {
             0% {
-                transform: translateY(150vh);
+                transform: translateY(120vh);
                 opacity: 0;
             }
-            30% {
+            20% {
                 opacity: 1;
             }
-            70% {
-                transform: translateY(-5vh);
+            80% {
+                transform: translateY(0);
                 opacity: 1;
             }
             100% {
-                transform: translateY(-5vh);
+                transform: translateY(0);
                 opacity: 1;
             }
         }
@@ -112,43 +71,23 @@
 
         /* Responsive */
         @media (max-width: 768px) {
-            .plane-container {
-                width: 250px;
-                height: 250px;
-                margin-bottom: 40px;
-            }
-
-            .paygo-text {
-                font-size: 70px;
-                letter-spacing: 15px;
+            .splash-image {
+                max-width: 85vw;
+                max-height: 85vh;
             }
         }
 
         @media (max-width: 480px) {
-            .plane-container {
-                width: 180px;
-                height: 180px;
-                margin-bottom: 30px;
-            }
-
-            .paygo-text {
-                font-size: 50px;
-                letter-spacing: 10px;
+            .splash-image {
+                max-width: 80vw;
+                max-height: 80vh;
             }
         }
     </style>
 </head>
 <body>
     <div class="splash-container" id="splashScreen">
-        <div class="animation-wrapper">
-            <!-- الطائرة -->
-            <div class="plane-container">
-                <div class="plane-mask"></div>
-            </div>
-
-            <!-- نص PAYGO -->
-            <div class="paygo-text">PAYGO</div>
-        </div>
+        <img src="splash-design.png" alt="PAYGO" class="splash-image">
     </div>
 
     <script>
